--- a/jojo saison 1 anime.html
+++ b/jojo saison 1 anime.html
@@ -44,84 +44,84 @@ text-decoration:none;
     <br>
     <h1><font face="calibri"> Episode 1 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/rua3WuZrxkSf6MOyZEUh9g2/2.mp4?s=bYS2ugXfAanjU5PPa1F1aiohlQuCJ6PrRi6yaLt40ecmsY0zsKnvgnnAo0zhdsN4aAsgBHsd6GcB8aslBEGaFQ2&r=TpeU7MP6EI4NSFNwurUEFaxsMAOlB1deody5TmWq2E91_6gEBbyNhxrGlyCzNqnh0&d=1420087&ri=J0Yj75gFmk2F_SX7XqENbw2"
+        <source src="https://fs91.myvi.tv:8092/ru/a3/Wu/Zr/xk/Sf/6M/Oy/ZE/Uh/9g/2/2.mp4?&s=urSnkuiDqZMz1AcKXK-hdZE4wNi6aAf5F-q_KTkBdRzO5isx2Z2PZ2bw_tKnpKIk-pp_61aDyd_oPDR5pZttcg2&r=8wQVOfERvZTqBod7FQVyGcuFq-Ky2emSLRJs1Yn70-w1&do=1420&d=1278&ri=HVdbBgOv-E-mhI7G6SBAow2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 2 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/X4EByK2cykaSYeiFt_F5_A2/2.mp4?s=1uZGiP66PJu1w7iErRLzB1sCs04oPKMXTLaoYOD2n3vyFOhPl8qL6P6TkPe9UaffaAsgBHsd6GcB8aslBEGaFQ2&r=Xu0ItC9dNhMFXvicCSJKPUu0VD0RnqdNX5TiOpe0Og9Okh2yq_1Ld3qi1Y9Uqpdn0&d=1420143&ri=JMEjix4ZU0ua5wxg6AHa8Q2"
+        <source src="https://fs91.myvi.tv:8092/X4/EB/yK/2c/yk/aS/Ye/iF/t_/F5/_A/2/2.mp4?&s=xPPvlYyPdWLW-bl0Q8P7egKeLed3ZHh9y7qOVfbvuRhuY8K1CnWl_nXLco2A-M1w-pp_61aDyd_oPDR5pZttcg2&r=ggAyibTlLnD9v3KWi28ITSwaVevEfaEwO2eYQtR6RKM1&do=1420&d=1278&ri=Mt74XhyBjUCPR_3DA4j9lA2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 3 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/f-J0-sPpMkW9-GzW8nHvCQ2/2.mp4?s=x8GJJ_cqLWP92-m9Rx5pWLFgo0JY7_YQHmnZa0ZMxaVKhiHThPt3LtW4DfnHy0T5aAsgBHsd6GcB8aslBEGaFQ2&r=SwadV489wfwHgXmXEA-HqiNTXh2-BUKTXjj2mseqbqnp7KPFOVAkhlOU-9Y4e5qB0&d=1512221&ri=WU8aaRLBskC-9_OXnOte2w2"
+        <source src="https://fs91.myvi.tv:8092/f-/J0/-s/Pp/Mk/W9/-G/zW/8n/Hv/CQ/2/2.mp4?&s=T87oCco9-aKc3DJNLkjPMkmmbF2tzZWswIMqiNuTRq1kq6ViS4D-ci7kh375De9e-pp_61aDyd_oPDR5pZttcg2&r=l5nV8lEfh92bdzF9WwW6jPg5xHjNq5fTo0Uv_sbVzcc1&do=1512&d=1361&ri=PEzje5dcX0CNFIwGiiHZVQ2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 4 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/yK7B6ku-z0GIHT1he-khlA2/2.mp4?s=hVA1AZH6z08kgGG8gkVVr-TSyZanZWpAO06zX3JbBBpqF2gf-QRuQRB9Z5a1QWq6aAsgBHsd6GcB8aslBEGaFQ2&r=5MeSxiLP9D0mEUHB91GfpydkdmVW7NuraU4kzyPx30MfZqV4hrLMclmcRlNVwKWW0&d=1420212&ri=FLfrMF7f3ESVvnNGHB92ew2"
+        <source src="https://fs91.myvi.tv:8092/yK/7B/6k/u-/z0/GI/HT/1h/e-/kh/lA/2/2.mp4?&s=6_9884ma3gYJOWK76Y35ERRBcNXtEX7GmT7D4O8EjFGIn1p-FlsfXmYtr3g6x5EI-pp_61aDyd_oPDR5pZttcg2&r=mnyASn_X-PdMBAHHp4oy_TZJQMJP8ktksR06qCscfZk1&do=1420&d=1278&ri=jHPVdm7T6kaMe01uegmB2A2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 5 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://cvs110-2.sibnet.ru/44/03/68/4403680.mp4?st=ZXWBU_77rZ2fuyc7vJ6vOg&e=1659144000&stor=34&noip=1"
+        <source src="https://cvs110-2.sibnet.ru/44/03/68/4403680.mp4?st=YLckehfAE55av3YMv87I0Q&e=1659837000&stor=34&noip=1"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 6 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://cvs110-2.sibnet.ru/44/03/68/4403681.mp4?st=CEYHbgbDZqbH5task8WRzw&e=1659144000&stor=25&noip=1"
+        <source src="https://cvs110-2.sibnet.ru/44/03/68/4403681.mp4?st=gSbLSMALuTNj7G3UysG2eQ&e=1659837000&stor=25&noip=1"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 7 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://cvs110-2.sibnet.ru/44/03/68/4403683.mp4?st=B50H-XZw5boFMXGThr4oHw&e=1659144000&stor=49&noip=1"
+        <source src="https://cvs110-2.sibnet.ru/44/03/68/4403683.mp4?st=5UQ_LeNKn7E66YUkrF2nUQ&e=1659837000&stor=49&noip=1"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 8 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/9KkLeYmG8E-R5XJwBwn1VQ2/2.mp4?s=h4vmErhxk1LCwolqS9TxypPpPi1-EDYiFh8fXXkyYCuHQpxTcj7y1tUuuupxnTKraAsgBHsd6GcB8aslBEGaFQ2&r=iJk_bp0hCcStOGn7Z8zzyIbeMmbTGpJY-bwQUQOopnRuFWGz-8Wdm4GdRMbc6DPP0&d=1420087&ri=mEc8FRuw70Sm0y0cidkbFQ2"
+        <source src="https://fs129.myvi.tv:8092/9K/kL/eY/mG/8E/-R/5X/Jw/Bw/n1/VQ/2/2.mp4?&s=lU2Y9sAQ_Lsg44hY-vOK_nhnT_r-x-oqMMkkbsdYyr4pF0CxWiBN6_encGJXQlZE-pp_61aDyd_oPDR5pZttcg2&r=ZRTGWRmVBVeL3OEDp3HGFysDlYVQJhrOh_j79tzjzEI1&do=1420&d=1278&ri=i7cLu6aGd0276DuHGRQegA2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 9 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/h7MuuVConkS3OTuh4Xi8dg2/2.mp4?s=iKnmflinH4LeC5Ca7HA9gbLVQwUOD8bTL9KIEuf8xREqTtOVHECF1vy7232ORcWOaAsgBHsd6GcB8aslBEGaFQ2&r=tYBvJUva38QJzZCcWR0NF_DBALxnaS_mVBVczDxC3tog7GzHIoyHwulOEzAY8lex0&d=1420143&ri=zGsuIY0TdUSL39XZGUaXrA2"
+        <source src="https://fs129.myvi.tv:8092/h7/Mu/uV/Co/nk/S3/OT/uh/4X/i8/dg/2/2.mp4?&s=zPJnEZc8-hRHiQPawlToHDJObOxvU73gQ-3O4vRIw7dYr-JRMUrpstP3e6es-KZ_-pp_61aDyd_oPDR5pZttcg2&r=MMaPVkBBoh9njSlvgbgxiD2CqM7xBuWVHoSjZJUUgTI1&do=1420&d=1278&ri=gH26O4X0S0qreEu-JoYanw2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 10 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/imTqE6zN_0KYbZWV96WMdw2/2.mp4?s=27gnVc2GoNCRGFSGdZOk45Gd-UULBb6WhYqL1Mtautq5OQwzFgImy9UwpvCVlymfaAsgBHsd6GcB8aslBEGaFQ2&r=ZFBIgv2fPCoiQ9wVrmcmgqyQdmqNe_09AG2XhX6Kp9hbAJtbYnAg4TfWQvyB1O6G0&d=6322074&ri=nxswoXO0tEKFeRFTIFSKTg2"
+        <source src="https://fs91.myvi.tv:8092/im/Tq/E6/zN/_0/KY/bZ/WV/96/WM/dw/2/2.mp4?&s=64h32Fnd2neECGe1L3ypS9NuQPL_-XnsT1LLx29LtjA50q-ZG_5SHDJWcBePee1T-pp_61aDyd_oPDR5pZttcg2&r=HDy36yz5WojqPdYoNvgJw0hbH0xczp-HSnDy0665Ig81&do=6322&d=5690&ri=eMjF0rToPEiF3vONm27ORQ2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 11 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/tRwfn8eHqEWkpryiZi9YWQ2/2.mp4?s=SkHoTT0wdk9fAaFnLAO65wpA0nLzsoKAErwCS5SZ0cWUjA53wRu0GWe7uAdaK1WWaAsgBHsd6GcB8aslBEGaFQ2&r=5kmYfMYlMQbjDGgy3E2rDIc8C6s574OCulTW5gUVKfAHw-DwC824sViLXrbwqXHn0&d=6320077&ri=wO2SHDHHmUqrj3bDPIah4w2"
+        <source src="https://fs91.myvi.tv:8092/tR/wf/n8/eH/qE/Wk/pr/yi/Zi/9Y/WQ/2/2.mp4?&s=SBCvs2DCGtMF74AntPRFOzoZTNVjyWPw2B9KR4HPjyuHeAYf9IbNNkDFK5zlJDb--pp_61aDyd_oPDR5pZttcg2&r=S-SNbpB38AheqGDn16lv00C7WPxwohpMPfhHWRkLr9I1&do=6320&d=5688&ri=OirhreJaREGdioixSojDXg2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 12 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/kpiRzFafLEK5PBVZyZ4J3w2/2.mp4?s=fIhFwmhYVeGblOasoDzpxUw0d5o_BgnkMN2dFOOBZZD5XoZigvhE7F_QgwhJxPHSaAsgBHsd6GcB8aslBEGaFQ2&r=4t1EbHkxxo_Lr1EZvDMKYO1pi_BVIhKpkFVE21D4c-ptxgVXYRr-bZtjLrbdnD1r0&d=6314087&ri=XL_vktF5f0uTlR7nl_WUWg2"
+        <source src="https://fs91.myvi.tv:8092/kp/iR/zF/af/LE/K5/PB/VZ/yZ/4J/3w/2/2.mp4?&s=XwpSgjKdfomn7MYAUU9aTh2QbV58LJozeyTeOr9v90Ar1KKSJN_U3AiqXwOn571k-pp_61aDyd_oPDR5pZttcg2&r=XT-gfjHAQS2FQPTCsJ4LzZGKygxNNBd3Dq09Ray0RgU1&do=6314&d=5683&ri=6gSZBkcAaUSEi1CIVsNMEQ2"
         type="video/mp4"/>
     </video>
 
