--- a/jojo saison 2 anime.html
+++ b/jojo saison 2 anime.html
@@ -44,119 +44,119 @@ text-decoration:none;
     <br>
     <h1><font face="calibri"> Episode 1 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/Hkwq6noTDk6yUNe1L2_lpw2/2.mp4?s=cBSbw5wKJMEjhnTmYCgYBG3AKciakZyyyjEM-SBYHNAJpuWh7SnjClfrGlPyuHaAaAsgBHsd6GcB8aslBEGaFQ2&r=YrkIuTO3Fn2VpEsL6DvBom91lfBMIF0YU7V270p0XxJoPrSEXI1bOei-VEUQMK2w0&d=1420047&ri=jJxJ4OId8U6OvGzemhnMpw2"
+        <source src="https://fs130.myvi.tv:8092/Hk/wq/6n/oT/Dk/6y/UN/e1/L2/_l/pw/2/2.mp4?&s=yqSkby32bhRuuY_a9yJo2Sc7ZasmBSERH8f719lDrVq_K3XDulJTl7anVHPSLTh5-pp_61aDyd_oPDR5pZttcg2&r=wDr987ENm0qKc_m2cRZoVjTk4Bfc4y_R9APCXyKg_8U1&do=1420&d=1278&ri=_UKc0rNKeEmQjVCrksFB2g2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 2 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/Zy6bHIoD0keJvD9zneTuDA2/2.mp4?s=H7yMSn5VH2mbk7G6cLLfSo9P7dJPz6F77dftMEdpoTFGwfcZI35VYvTIL-yQGaI_aAsgBHsd6GcB8aslBEGaFQ2&r=G51ChrCWXWEr-ekvC6C1_dKvhtVd8P0AtPxgHPjxVa7ZECdut3WAQMKHjAZSqUbd0&d=1420067&ri=SBrqPTHEa0m-3h94QUnClA2"
+        <source src="https://fs130.myvi.tv:8092/Zy/6b/HI/oD/0k/eJ/vD/9z/ne/Tu/DA/2/2.mp4?&s=DapkpcaphOqzfIGaAK0EUsm9l8_Sdz1ao_F-pIPYX4h-C87QEo6mQWvlzqN0RQ15-pp_61aDyd_oPDR5pZttcg2&r=PDC-yQXxQPos8V2RT0i2IBOg8i83kbYBJQHHkWod1uI1&do=1420&d=1278&ri=GHLwuWJetEKhCG-eoy5wtQ2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 3 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/6Wtu6aAfqEO5Kj5Cz_FlCA2/2.mp4?s=Z4NlxeoYsEFoxX23zlKYl9UPdw7BCUmopsIk0wbEEAXrQh5msNyMmGsCuu0dV42ZaAsgBHsd6GcB8aslBEGaFQ2&r=2oMoKc2_l5ysyVKIAjCAhkmZSQskEw4d4kWXCZeyBAdZIGYdet4E54jIV0TU5b1D0&d=1419067&ri=yGYMvOV660ubRlv6ccH20A2"
+        <source src="https://fs91.myvi.tv:8092/6W/tu/6a/Af/qE/O5/Kj/5C/z_/Fl/CA/2/2.mp4?&s=1ynY0-tg8VjPQdi7wfd3pFrbln2T5XAlbX-24ySI9P3PUimnu5Cd74xLVofL360n-pp_61aDyd_oPDR5pZttcg2&r=EXRDI80xPV5ZXVNasmyqG0zvFUNRu5VdP52wPGLlgBg1&do=1419&d=1278&ri=8KDDTMtVA0mA6tlkNkxK3g2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 4 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/PRm1ClCs5kamimGZVKj2kQ2/2.mp4?s=SNIghY2MO4Hcgg5xfklbdcz8GBBKjzrEo_DkLKTWQdd2ZZXbJCllnMo8zWQbpkKraAsgBHsd6GcB8aslBEGaFQ2&r=7LiiPgUcepqT5HsEatNHH3_ZjAWJ-KksSyj6WvUEPEE862Xs6AnBj2SEtJRYmgCd0&d=1420034&ri=04mdIRVlC0G9QPmxxi7OBA2"
+        <source src="https://fs91.myvi.tv:8092/PR/m1/Cl/Cs/5k/am/im/GZ/VK/j2/kQ/2/2.mp4?&s=MO7V9Y12Q1TCWyT5vgnuZ0zI4iwf3vPxLOcteaEk3l3eb8niOlSyLhx9tUvLqgpK-pp_61aDyd_oPDR5pZttcg2&r=lOcT9ksOQ8cU9H61a8ydjOg5Be-OHoP4N5I7FQqq9uQ1&do=1420&d=1278&ri=xYDCk--dfUCzUZ4O8TjBCw2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 5 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/k6vVdqSz7k-U7zhdCSuqcg2/2.mp4?s=lR8IQTEQ2XcAhVs_e_H9eYiNG2VFjQU4W2ow4K6CPkZf73Wq_qkU0FV7srQVoNbvaAsgBHsd6GcB8aslBEGaFQ2&r=13IJzq1IGkXSpgtnSOlvCZWiSdWSvw2Qj5s6XeZLalJLXWJLBKxofLz-pGJDm9Aj0&d=1420067&ri=p-BfBYsA1k-A95_CNUXgAw2"
+        <source src="https://fs91.myvi.tv:8092/k6/vV/dq/Sz/7k/-U/7z/hd/CS/uq/cg/2/2.mp4?&s=dRdyiD1D3l-lrc4wVpSMOYQjDas6tSg_9uPSFoxKN8halbmraxKoB1V3XZ9eK4SB-pp_61aDyd_oPDR5pZttcg2&r=PPIrIx8ou5aHd56dGyvBABUc241McpX4Tj0eRaeWMw41&do=1420&d=1278&ri=HrCWfymhD0ySl908E4Sgzw2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 6 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/w6Uy4v5ZeUmUUI8Z4lNAoA2/2.mp4?s=JR0wkAg7ZzM9cuaScY0HW_FDF7EQbiG2EUNN_v-ck_6lnzARc19X6tzo5zj1QXcvaAsgBHsd6GcB8aslBEGaFQ2&r=1Vk0Bf_TQmrs8NOQGs2T9q7nGojARwvzasxlsawcVeMJG_cC-QcUPN2tXljBNnxC0&d=1420034&ri=dFDJf86ox0SOZEnltM3SwQ2"
+        <source src="https://fs91.myvi.tv:8092/w6/Uy/4v/5Z/eU/mU/UI/8Z/4l/NA/oA/2/2.mp4?&s=FpzoQQsa2uHs-rqBDrwU5u4MERG3RlTosSqGQ9PWWr4ZuX3158c57H6hQNA1e6jc-pp_61aDyd_oPDR5pZttcg2&r=CKpJBcOf9jDw1XYYLttNQoYLZMLJ8nwYLUyKc1ppYFc1&do=1420&d=1278&ri=QtaIqPV8D0KYOCulP4bGpQ2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 7 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/6GiPN4KztUmU4WkIFrkZ4g2/2.mp4?s=BB-7qH334escWGhvK2bHRDQPCkUlDDxbM5nMPZWTLD5FL4_AKaoY2M4K3BjBuctDaAsgBHsd6GcB8aslBEGaFQ2&r=EWB2ab1y1Aawe4dres98-eFvqUmbEsicNnUFEoXS0EIDOGKumtW8xATY0qjJFSpg0&d=1509067&ri=TXUpHhVbAUilDMajsHUUmw2"
+        <source src="https://fs91.myvi.tv:8092/6G/iP/N4/Kz/tU/mU/4W/kI/Fr/kZ/4g/2/2.mp4?&s=JZtO1HReS6bXyy5ELNAY4suTbKkgPiDEgkequ3vw_y4PsA8K-exXwrGsngGRemtL-pp_61aDyd_oPDR5pZttcg2&r=eC7S40cNMZQ7LVAQhbPVqeRfCElQWcfu-9A7fTHt3tQ1&do=1509&d=1359&ri=lmQpnj4XYEyzmT-riU3ISg2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 8 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/fPJXW4IRfUCFIpkTyh11jQ2/2.mp4?s=xfFyn-kY7nEP-1W7dpJb12FAe489jb-4va_El0b4gqldrrosqLnKCexhfXX2mwHsaAsgBHsd6GcB8aslBEGaFQ2&r=EfvmbWisLkvM0yzEMkkLZT6D5S1fiwC2DItaoQC_DT-WTHSUflQTJwqIPZDHHvkW0&d=1509067&ri=tAuRj5HGMEGSw9bopHpoOg2"
+        <source src="https://fs129.myvi.tv:8092/fP/JX/W4/IR/fU/CF/Ip/kT/yh/11/jQ/2/2.mp4?&s=sum66xIdWZlcM9X_rm0VLyn9HuzsXsQvsYunIYxnxx3vlxm2pHKqaMihyOf3WRd--pp_61aDyd_oPDR5pZttcg2&r=aReVyIfEKBPG43zEM6ygwLKFgWm9608EXrC8-FoTcJM1&do=1509&d=1359&ri=j6jfrBh0TkGlZ7lEyVgqGQ2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 9 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/g_F8lyyr7UWTsDNOjkoVCQ2/2.mp4?s=mRTGf6fDrV4_Qk5HyP5BpO8FCe3agQD0Dbos_TW7ZHGGEquDsdNdiHzFV9uJBuY-aAsgBHsd6GcB8aslBEGaFQ2&r=GrVFGvbFDotMEdf9VBfG8-_vVu9F_EQvkPf9-deNZUTqZGPsT6F0N4W-MzPoe9m20&d=1509067&ri=-k8FBtpyF0STZhytuV9w2g2"
+        <source src="https://fs91.myvi.tv:8092/g_/F8/ly/yr/7U/WT/sD/NO/jk/oV/CQ/2/2.mp4?&s=zO_og6ZYOltrL60DEHNGGxDXJy-Yd8jFEjFxCYeU_rGlNODoVDWSHnd89Khuz1fn-pp_61aDyd_oPDR5pZttcg2&r=_Ae8cbuYdhqZ136435MsFYXHyLtH0uX3s8EXdW4tRVk1&do=1509&d=1359&ri=juOsnGpQz0mkJ6hx4OPMvQ2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 10 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/tAZ21agmqE6VMEDAD9PdmQ2/2.mp4?s=tSjg_p9BL1AFXZIo02o6FPkAW4ZsTbGh4e35O_7Tfk-e4bKVqoBuuzYetP1BvcRQaAsgBHsd6GcB8aslBEGaFQ2&r=e22_uuDxQxxGVf9ABFv8ARTDUo4DpW-jkS6MS__OBv874VA9_ZX7hfGlN49usNxH0&d=1419067&ri=dY0IveV19kOSaXdIN5PSXQ2"
+        <source src="https://fs130.myvi.tv:8092/tA/Z2/1a/gm/qE/6V/ME/DA/D9/Pd/mQ/2/2.mp4?&s=E_rH2iFWPydraoayKmrgwyLbuJJRhca4VTSVklwGVkYYF5p4BBzvLO5pIgsXM7j4-pp_61aDyd_oPDR5pZttcg2&r=XP53WQZZqDVOd0UdQmRLtU8FXYL6_ZDQFJE02FhHitM1&do=1419&d=1278&ri=vNG034XYJkGYs4HPQ81szQ2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 11 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/7vwWA0lA2kmUITmh--dOFw2/2.mp4?s=aavMrUTGrNNl_ijsHQ3Q6LTi8kMTJH8CVSaz-GZ3XafD3gQf6v8MaNmVwiRM-63BaAsgBHsd6GcB8aslBEGaFQ2&r=tq7E_7W5-8qAJRS_lnOgVZt64xiZfrQDGySOjyVQWQPnEiemXkU2HHVWNw9txnDf0&d=1509034&ri=OGSV-4UC7kecFuoS1scmyA2"
-        type="video/mp4"/>
+        <source src="https://fs91.myvi.tv:8092/7v/wW/A0/lA/2k/mU/IT/mh/--/dO/Fw/2/2.mp4?&s=oFx0NMuMveMPZRUvKiWxCMoCozuWNnqprtBVZq-MTZJVfbjc7KN3l3jiGcSpBm0I-pp_61aDyd_oPDR5pZttcg2&r=KS6WkS1FDlAD63CEyTmSYS7_cx-TJW9lZXOcKVqurqY1&do=1509&d=1359&ri=KlncDUvIt0GE9LxQt-7mKQ2"
+        type="video/mp4"/>ke
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 12 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/xDKoHJX4K0yQmKPY-5qd9g2/2.mp4?s=pE_MZ5rhR6k98JcPzRicxrOHXeITmf9O87bRCvm0hjCHrYzwWORqtiGqSwwTyxFaaAsgBHsd6GcB8aslBEGaFQ2&r=PEn50RK_-LDLwB11NISNivH0vQlQQAlmdwAzAroblq78yoTvu0lHiHvTPr20qO4J0&d=1509067&ri=lLCl83Zm90uXkEYPtD9afg2"
+        <source src="https://fs91.myvi.tv:8092/xD/Ko/HJ/X4/K0/yQ/mK/PY/-5/qd/9g/2/2.mp4?&s=-Y_fa3GXV7qJ4aiHuJCNJP0Womu4vx7DtwbbutEwRVk4WYf7D4wRfOnIXFyL1xKX-pp_61aDyd_oPDR5pZttcg2&r=lnzHsF0pmwcjgWrySuw5M7Nvk4vbDP9pNCD15-_6W4Y1&do=1509&d=1359&ri=DSIcwBIso0ufzmv3XVptGw2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 13 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://dv10.sibnet.ru/44/03/69/4403698.mp4?st=Rcs0vmawkQYSAWlA6y3gew&e=1659144000&stor=10&noip=1"
+        <source src="https://cvs13-2.sibnet.ru/44/03/69/4403698.mp4?st=B0xL-4DUDe5_owxbhwUYCg&e=1659840000&stor=10&noip=1"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 14</font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/UIeKgGkkGEOh2ucI9Fj98w2/2.mp4?s=CFmZ24kQFDxX5WhYbbMKjnU6tK3lzrJglt9BfZLcjEr7cvaKBMR6kWL9kjffK3LcaAsgBHsd6GcB8aslBEGaFQ2&r=6HL13BjK_La2931iK7MYatFZMQawrNxMaYwVA8FZNebavDmXkdkcCNXZ_ALB8H_a0&d=1419067&ri=altpmGiagEKgtm1hflI0Ag2"
+        <source src="https://fs91.myvi.tv:8092/UI/eK/gG/kk/GE/Oh/2u/cI/9F/j9/8w/2/2.mp4?&s=Dxlgq2EJ7-ckG8H0xPjHRJw9ryK5jQKfD5R21PvRKv4d__uyGfZNVRXpDZ_fT064-pp_61aDyd_oPDR5pZttcg2&r=alJh_skTn8U2nRXI_sJhPK7qz8sl1in33rfHj7Fn22k1&do=1419&d=1278&ri=x3pWGgaQOUOT04FPNvvmpQ2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 15 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/FU5kdr9efUaNF50pEV_DNg2/2.mp4?s=JKHaSYqspCTKxa1L6ADY2Fy9RgNlYJ4ZvsL2-SlpYLL_jZERfSZGDdZcqA5EZETeaAsgBHsd6GcB8aslBEGaFQ2&r=_z7vFyZ4xuIHDMf1h7LgygG52jfmjDhJcH4y3tTg5dWLZO-2e_-aFdZa7XhrjRZo0&d=1420067&ri=_6Np82EEaEi6Z3awvvWyQg2"
+        <source src="https://fs91.myvi.tv:8092/FU/5k/dr/9e/fU/aN/F5/0p/EV/_D/Ng/2/2.mp4?&s=zjLCwQJFSbhaAYipjxNDtZYcccbSJK0er42x6jQJT342f1iZu_JQhllF0olhpVkZ-pp_61aDyd_oPDR5pZttcg2&r=V_nJc399LrIEzi8HoaMtEz5IcbhDZH7epZlgmcXYonQ1&do=1420&d=1278&ri=K3f0PXDpQ0Gjl6lNPTg_4A2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 16 </font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/CmbD7qHCh0K-wQNlPiGHng2/2.mp4?s=7RWZZ1ipGrYhDQg-JS-iLutYUb3sdTNMqPVaud74Tk6R3de9cweFp98GOB4-JbzeaAsgBHsd6GcB8aslBEGaFQ2&r=ncp-iwDo3I57sRIPSSascgxO1Wk44P-gnOi21iyG5JEhN_SORUpm1rNR-QrmAEEY0&d=1419067&ri=JemTG8-lOUyHUzux5B3ARQ2"
+        <source src="https://fs91.myvi.tv:8092/Cm/bD/7q/HC/h0/K-/wQ/Nl/Pi/GH/ng/2/2.mp4?&s=53CtBJQf-JHxqCEjQgf14Qd_WylieDbpB16HL2a-K3ywjzKb4c-vYhL5kscZws23-pp_61aDyd_oPDR5pZttcg2&r=sRJIiJBi5GqeZQOcglyfwBT8ezJuCGKQa5pB2Cdc8QU1&do=1419&d=1278&ri=ZufGXr2B00u0KPFOmWa5ag2"
         type="video/mp4"/>
     </video>
     <br>
     <br>
     <h1><font face="calibri"> Episode 17</font></h1>
     <video width="900px" controls loop >
-        <source src="https://www.myvi.top/stream/7UWJ14y4LUKbpLVexkPNnw2/2.mp4?s=2rO-xL7gaf-nV6cb6hAR7dtY_C3T8yRAk9IzrSg8Y9wnFVUqgq1D5phvoShzUauHaAsgBHsd6GcB8aslBEGaFQ2&r=CoG0LMoYJwsIURA1mREXklkrSW-QVS4S9dVeiemeRSZ7Kz44HhTbRfizpTDb8I5l0&d=1403067&ri=TtHlB7q54EqugeUQI_OZKw2"
+        <source src="https://fs91.myvi.tv:8092/7U/WJ/14/y4/LU/Kb/pL/Ve/xk/PN/nw/2/2.mp4?&s=jABSzn5i54dC0HgN4KuGFQpWRE9SeXSSpDvD9HJsBE9YiFMkDbtquhowtB-xlT8g-pp_61aDyd_oPDR5pZttcg2&r=9lMwcHUabhFuFcbe_pG2_sEaWXBuO6JYG7yFWqNmnks1&do=1403&d=1263&ri=PTtuTUpDdUqILsONzJZnDg2"
         type="video/mp4"/>
     </video>
 
