--- a/accueil animés.html
+++ b/accueil animés.html
@@ -43,10 +43,10 @@ text-decoration:none;
         <br>
         <br>
          
-    <h2><a href="liste episodes naruto.html" class="btn"><font face="calibri">Naruto VF</font></a></h2>
-    <h2><a href="liste eepisodes snk.html" class="btn"><font face="calibri">Shingeki no Kyojin VF ( l'attaque des titans )</font></a></h2>
+    <!--<h2><a href="liste episodes naruto.html" class="btn"><font face="calibri">Naruto VF</font></a></h2>-->
+    <!--<h2><a href="liste eepisodes snk.html" class="btn"><font face="calibri">Shingeki no Kyojin VF ( l'attaque des titans )</font></a></h2>-->
     <h2><a href="liste episodes jojo.html" class="btn"><font face="calibri">Jojo's Bizarre Adventure VOSTFR </font></a></h2>
-    <h2><a href="liste episodes demon slayer.html" class="btn"><font face="calibri">Demon Slayer VF</font></a></h2>
+    <!--<h2><a href="liste episodes demon slayer.html" class="btn"><font face="calibri">Demon Slayer VF</font></a></h2>-->
     <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
    <br>
    <br>
