--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h1><font face="calibri">Animés</font></h1>
 <!--<h3><a href="liste episodes naruto.html" class="btn"><font face="calibri">Naruto VF (intégral)</font></a></h3>-->
 <!--<h3><a href="liste eepisodes snk.html" class="btn"><font face="calibri">L'attaque des titans VF (intégral)</font></a></h3>-->
-<h3><a href="liste episodes jojo.html" class="btn"><font face="calibri">Jojo's Bizarre Adventure VOSTFR (intégral)</font></a></h3>
+<h3><a href="liste episodes jojo.html" class="btn"><font face="calibri">Jojo's Bizarre Adventure VOSTFR </font></a></h3>
 <!--<h3><a href="liste episodes demon slayer.html" class="btn"><font face="calibri">Demon Slayer VF (intégral)</font></a></h3>-->
 <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
         
