--- a/liste episodes jojo.html
+++ b/liste episodes jojo.html
@@ -44,8 +44,8 @@ text-decoration:none;
         <br>
          
     <h2><a href="jojo saison 1 anime.html" class="btn"><font face="calibri">Saison 1 VOSTFR</font></a></h2>
-    <!--<h2><a href="jojo saison 2 anime.html" class="btn"><font face="calibri">Saison 2 VOSTFR</font></a></h2>
-    <!--<h2><a href="jojo saison 3 anime.html" class="btn"><font face="calibri">Saison 3 VOSTFR</font></a></h2>-->
+    <h2><a href="jojo saison 2 anime.html" class="btn"><font face="calibri">Saison 2 VOSTFR</font></a></h2>
+    <h2><a href="jojo saison 3 anime.html" class="btn"><font face="calibri">Saison 3 VOSTFR</font></a></h2>
     <!--<h2><a href="jojo saison 4 anime.html" class="btn"><font face="calibri">Saison 4 VOSTFR</font></a></h2>-->
     <!--<h2><a href="jojo saison 5 anime.html" class="btn"><font face="calibri">Saison 5 VOSTFR</font></a></h2>-->
     <!--<h2><a href="jojo saison 6 anime.html" class="btn"><font face="calibri">Saison 6 VOSTFR</font></a></h2>-->
