--- a/les chaps.html
+++ b/les chaps.html
@@ -128,6 +128,9 @@
     <a href="chap101.html" class="btn"><h2>CHAPITRE 101</h2></a>
     <a href="chap102.html" class="btn"><h2>CHAPITRE 102</h2></a>
     <a href="chap103.html" class="btn"><h2>CHAPITRE 103</h2></a>
+    <a href="chap104.html" class="btn"><h2>CHAPITRE 104</h2></a>
+    <a href="chap105.html" class="btn"><h2>CHAPITRE 105</h2></a>
+    <a href="chap106.html" class="btn"><h2>CHAPITRE 1036</h2></a>
     <a href="chap1050.html" class="btn"><h2>CHAPITRE 1050</a></h2>
     <a href="chap1051.html" class="btn"><h2>CHAPITRE 1051</a></h2>
     <a href="chap1052.html" class="btn"><h2>CHAPITRE 1052</a></h2>
